# sprinklercontroller

./: .clang-format  .dockerignore  CMakeLists.txt  Makefile  README.md  compile_flags.txt  linux.dockerfile  pico.dockerfile
.github/workflows/: c-cpp.yml  ci.yml  pico.yml  release.yml
docker/dev/pico/: Dockerfile
example/: CMakeLists.txt
impl/sim/: SimulatedSprinklerController.cpp  SimulatedSprinklerController.hpp
lib/: SprinklerHeadController.cpp  SprinklerHeadController.hpp
src/: SprinklerHeadController.c  SprinklerHeadController.h  main.c  main.cpp
test/: SprinklerHeadController.cpp
